Page title change

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="https://wearepsh.com/static/images/favicon/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title> Game Stats</title>
+    <title>PSh Game Stats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
